# serde_xml_adapt

./: Cargo.toml  README.md
.github/workflows/: rust-nightly.yml  rust.yml
examples/: gpx.rs
src/: element.rs  error.rs  lib.rs
src/de/: error.rs  escape.rs  map.rs  mod.rs  seq.rs  var.rs
src/ser/: attributes.rs  error.rs  mod.rs  nonser.rs  var.rs
