[package]
name = "xserde"
description = "Extended XML serialisation for serde"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"
license = "MIT"
categories = ["encoding", "parsing", "text-processing"]
keywords = ["xml", "serialization", "serde"]

[dependencies]
serde = "1.0"
quick-xml = { version = "0.22.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"